src/javaccproject/Exp1.java
package javaccproject;

import java.io.BufferedReader;
import java.io.FileReader;
import java.io.IOException;
import java.io.StringReader;

import javaccproject.tokens.ClassToken;
import javaccproject.tokens.ConstructorMethodToken;
import javaccproject.tokens.FormalArgVarDeclToken;
import javaccproject.tokens.MethodToken;
import javaccproject.tokens.Token;
import javaccproject.tokens.VariableDeclToken;

/* Exp1.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. Exp1.java */
public class Exp1/* @bgen(jjtree) */implements Exp1TreeConstants, Exp1Constants
{/*
  * @ bgen ( jjtree )
  */

    protected static JJTExp1State jjtree = new JJTExp1State();
    
    public static void main(String[] args) {
        try {
            String file = "";
            if (args.length == 0 || args[0].length() == 0) {
                // stdin, not implemented
                System.err.println("Reading from stdin not implemented");
                return;
            } else {
                if (args[0].split(" ").length == 1) {
                    // file
                    BufferedReader in = new BufferedReader(new FileReader(args[0]));
                    StringBuilder str = new StringBuilder();
                    String temp;
                    while((temp = in.readLine())!= null)
                    {
                        str.append(String.format("%s\n", temp));
                    }
                    in.close();
                    file = str.toString();
                } else {
                    // redirected input
                    file = args[0];
                }
            }
            SymbolTable result = parse(file);
            System.out.printf("Parsing successful, results:\n%s", result);
        } catch (ParseException e) {
            // Catching Throwable is ugly but JavaCC throws Error objects!
            System.err.println("Syntax check failed: " + e.getMessage());
        } catch (java.io.FileNotFoundException e) {
            System.err.printf("File not found: %s\u005cn", args[0]);
        } catch (IOException e) {
            // TODO Auto-generated catch block
            e.printStackTrace();
        }
    }

    public static SymbolTable parse(String toParse) throws ParseException {
        SymbolTable symbolTable = new SymbolTable();
        try {
            new Exp1(new StringReader(toParse)).__Start(symbolTable);
            // debug: System.out.println("Syntax is okay");
            return symbolTable;
        } catch (ParseException e) {
            // Catching Throwable is ugly but JavaCC throws Error objects!
            throw e;
        }
    }

    /*
     * _p denotes the ' character from the grammar all methods start with two
     * underscores to denote that they are methods as opposed to keywords
     * defined above.
     */
    
    //recursive checking symbol tables
    private static boolean checkRecursiveSymbolTables(SymbolTable symbolTable, String tokenToCheck){
        return true;
        /*if (symbolTable == null) return false;
        if(symbolTable.getToken(tokenToCheck) == null){
            return (symbolTable.tableOf == null) ? false :
                    checkRecursiveSymbolTables(symbolTable.tableOf.containedIn, tokenToCheck);
        }
        return true;*/
    }
    
    final public void __Start(SymbolTable symbolTable) throws ParseException {/*
                                                                               * @
                                                                               * bgen
                                                                               * (
                                                                               * jjtree
                                                                               * )
                                                                               * __Start
                                                                               */
        SimpleNode jjtn000 = new SimpleNode(JJT__START);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            label_1: while (true) {
                __Class(symbolTable);
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk)
                {
                    case CLASS: {
                        ;
                        break;
                    }
                    default:
                        jj_la1[0] = jj_gen;
                        break label_1;
                }
            }
            jj_consume_token(0);
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) throw (RuntimeException) jjte000;
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) throw (ParseException) jjte000;
                }
            }
            {
                if (true) throw (Error) jjte000;
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }
    final public void __Class(SymbolTable symbolTable) throws ParseException {/*
                                                                               * @
                                                                               * bgen
                                                                               * (
                                                                               * jjtree
                                                                               * )
                                                                               * __Class
                                                                               */
        SimpleNode jjtn000 = new SimpleNode(JJT__CLASS);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            jj_consume_token(CLASS);
            Token thisClass = new ClassToken(jj_consume_token(ID));
            symbolTable.setToken(thisClass);
            thisClass.containedIn = symbolTable;
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk)
            {
                case EXTENDS: {
                    __Super((ClassToken)thisClass, symbolTable);
                    break;
                }
                default:
                    jj_la1[1] = jj_gen;
                    ;
            }
            jj_consume_token(L_CURL_BRACKET);
            label_2: while (true) {

                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk)
                {
                    case PRIVATE:
                    case PROTECTED:
                    case PUBLIC:
                    case STATIC:
                    case BOOLEAN:
                    case CHAR:
                    case INT:
                    case VOID:
                    case ID: {
                        ;
                        break;
                    }
                    default:
                        jj_la1[2] = jj_gen;
                        break label_2;
                }
                __Member(thisClass.myContext);
            }
            jj_consume_token(R_CURL_BRACKET);
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) throw (RuntimeException) jjte000;
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) throw (ParseException) jjte000;
                }
            }
            {
                if (true) throw (Error) jjte000;
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }
    final public void __Super(ClassToken thisClass, SymbolTable symbolTable)
            throws ParseException {/*
                                    * @bgen( jjtree ) __Super
                                    */
        SimpleNode jjtn000 = new SimpleNode(JJT__SUPER);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            jj_consume_token(EXTENDS);
            Token superClass = jj_consume_token(ID);
            thisClass.superclass = superClass.image;
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }
    static final public void __Member(SymbolTable symbolTable)
            throws ParseException {/*
                                    * @bgen(jjtree) __Member
                                    */
        SimpleNode jjtn000 = new SimpleNode(JJT__MEMBER);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            DataType memberType = new DataType();
            label_3: while (true) {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk)
                {
                    case PRIVATE:
                    case PROTECTED:
                    case PUBLIC:
                    case STATIC: {
                        ;
                        break;
                    }
                    default:
                        jj_la1[3] = jj_gen;
                        break label_3;
                }
                __Modifier(memberType, symbolTable);
            }
            __Member_p(memberType, symbolTable);
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) throw (RuntimeException) jjte000;
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) throw (ParseException) jjte000;
                }
            }
            {
                if (true) throw (Error) jjte000;
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }
    static final public void __Modifier(DataType memberType, SymbolTable symbolTable)
            throws ParseException {/*
                                    * @bgen(jjtree) __Modifier
                                    */
        SimpleNode jjtn000 = new SimpleNode(JJT__MODIFIER);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk)
            {
                case STATIC: {
                    Token token = jj_consume_token(STATIC);
                    if(memberType.isStatic) throw new ParseException(String.format("Error at %s: Duplicate static keyword", token.parseExcept()));
                    memberType.isStatic = true;
                    break;
                }
                case PUBLIC: {
                    Token token = jj_consume_token(PUBLIC);
                    if(memberType.accessModifier != Token.AccessModifier.Default) throw new ParseException(String.format("Error at %s: Conflicting access modifiers", token.parseExcept()));
                    memberType.accessModifier = Token.AccessModifier.Public;
                    break;
                }
                case PRIVATE: {
                    Token token = jj_consume_token(PRIVATE);
                    if(memberType.accessModifier != Token.AccessModifier.Default) throw new ParseException(String.format("Error at %s: Conflicting access modifiers", token.parseExcept()));
                    memberType.accessModifier = Token.AccessModifier.Private;
                    break;
                }
                case PROTECTED: {
                    Token token = jj_consume_token(PROTECTED);
                    if(memberType.accessModifier != Token.AccessModifier.Default) throw new ParseException(String.format("Error at %s: Conflicting access modifiers", token.parseExcept()));
                    memberType.accessModifier = Token.AccessModifier.Protected;
                    break;
                }
                default:
                    jj_la1[4] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }
    static final public void __Member_p(DataType memberType, SymbolTable symbolTable)
            throws ParseException {/*
                                    * @bgen(jjtree) __Member_p
                                    */
        SimpleNode jjtn000 = new SimpleNode(JJT__MEMBER_P);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk)
            {
                case ID: {
                    Token idForMemberID = jj_consume_token(ID);
                    __MemberId(memberType, idForMemberID, symbolTable);
                    break;
                }
                case BOOLEAN:
                case CHAR:
                case INT:
                case VOID: {
                    __PrimitiveType(memberType, symbolTable);
                    __Type_p(memberType, symbolTable);
                    __Member_p_p(memberType, symbolTable);
                    break;
                }
                default:
                    jj_la1[5] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) throw (RuntimeException) jjte000;
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) throw (ParseException) jjte000;
                }
            }
            {
                if (true) throw (Error) jjte000;
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }
    static final public void __MemberId(DataType memberType, Token idForMemberID, SymbolTable symbolTable)//TODO: do this
            throws ParseException {/*
                                    * @bgen(jjtree) __MemberId
                                    */
        SimpleNode jjtn000 = new SimpleNode(JJT__MEMBERID);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk)
            {
                case LP: {
                    //idForMemberID is the id of some method
                    Token method;
                    if(memberType.type != null) method = new MethodToken(idForMemberID);
                    else method = new ConstructorMethodToken(idForMemberID);
                    ((MethodToken)method).myType = memberType;
                    symbolTable.setToken(method);
                    method.containedIn = symbolTable;
                    __FormalArgs((MethodToken)method, method.myContext);//not done
                    __Block(method.myContext);
                    break;
                }
                case ID:
                case L_STRAIGHT_BRACKET: {
                    //idForMemberID was an object type
                    memberType.type = Token.ReturnType.Object;
                    memberType.objectType = idForMemberID.image;
                    __Type_p(memberType, symbolTable);
                    __Member_p_p(memberType, symbolTable);
                    break;
                }
                default:
                    jj_la1[6] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) throw (RuntimeException) jjte000;
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) throw (ParseException) jjte000;
                }
            }
            {
                if (true) throw (Error) jjte000;
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }
    static final public void __FormalArgs(MethodToken methodToken, SymbolTable symbolTable)
            throws ParseException {/*
                                    * @bgen(jjtree ) __FormalArgs
                                    */
        SimpleNode jjtn000 = new SimpleNode(JJT__FORMALARGS);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            jj_consume_token(LP);
            label_4: while (true) {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk)
                {
                    case BOOLEAN:
                    case CHAR:
                    case INT:
                    case VOID:
                    case ID: {
                        ;
                        break;
                    }
                    default:
                        jj_la1[7] = jj_gen;
                        break label_4;
                }
                __FormalArgList(symbolTable);
            }
            jj_consume_token(RP);
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) throw (RuntimeException) jjte000;
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) throw (ParseException) jjte000;
                }
            }
            {
                if (true) throw (Error) jjte000;
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }
    static final public void __FormalArgList(SymbolTable symbolTable)
            throws ParseException {/*
                                    * @bgen( jjtree ) __FormalArgList
                                    */
        SimpleNode jjtn000 = new SimpleNode(JJT__FORMALARGLIST);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            __FormalArg(symbolTable);
            label_5: while (true) {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk)
                {
                    case COMMA: {
                        ;
                        break;
                    }
                    default:
                        jj_la1[8] = jj_gen;
                        break label_5;
                }
                jj_consume_token(COMMA);
                __FormalArg(symbolTable);
            }
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) throw (RuntimeException) jjte000;
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) throw (ParseException) jjte000;
                }
            }
            {
                if (true) throw (Error) jjte000;
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }
    static final public void __FormalArg(SymbolTable symbolTable)
            throws ParseException {/*
                                    * @bgen(jjtree ) __FormalArg
                                    */
        SimpleNode jjtn000 = new SimpleNode(JJT__FORMALARG);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            DataType formalArgType = new DataType();
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk)
            {
                case BOOLEAN:
                case CHAR:
                case INT:
                case VOID: {
                    __Type(formalArgType, symbolTable);
                    __VarDeclaratorId(true, formalArgType, symbolTable);
                    break;
                }
                case ID: {
                    Token type = jj_consume_token(ID);
                    formalArgType.type = Token.ReturnType.Object;
                    formalArgType.objectType = type.image;
                    __Type_p(formalArgType, symbolTable);
                    __VarDeclaratorId(true, formalArgType, symbolTable);
                    break;
                }
                default:
                    jj_la1[9] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) throw (RuntimeException) jjte000;
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) throw (ParseException) jjte000;
                }
            }
            {
                if (true) throw (Error) jjte000;
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }
    static final public void __Type(DataType type, SymbolTable symbolTable)
            throws ParseException {/*
                                    * @bgen(jjtree) __Type
                                    */
        SimpleNode jjtn000 = new SimpleNode(JJT__TYPE);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            __PrimitiveType(type, symbolTable);
            __Type_p(type, symbolTable);
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) throw (RuntimeException) jjte000;
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) throw (ParseException) jjte000;
                }
            }
            {
                if (true) throw (Error) jjte000;
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }
    static final public void __Type_p(DataType type, SymbolTable symbolTable)
            throws ParseException {/*
                                    * @bgen(jjtree) __Type_p
                                    */
        SimpleNode jjtn000 = new SimpleNode(JJT__TYPE_P);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            label_6: while (true) {
                switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk)
                {
                    case L_STRAIGHT_BRACKET: {
                        ;
                        break;
                    }
                    default:
                        jj_la1[10] = jj_gen;
                        break label_6;
                }
                jj_consume_token(L_STRAIGHT_BRACKET);
                jj_consume_token(R_STRAIGHT_BRACKET);
                type.arrDim++;
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }
    static final public void __PrimitiveType(DataType type, SymbolTable symbolTable)
            throws ParseException {/*
                                    * @bgen( jjtree ) __PrimitiveType
                                    */
        SimpleNode jjtn000 = new SimpleNode(JJT__PRIMITIVETYPE);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk)
            {
                case BOOLEAN: {
                    jj_consume_token(BOOLEAN);
                    type.type = Token.ReturnType.Boolean;
                    break;
                }
                case CHAR: {
                    jj_consume_token(CHAR);
                    type.type = Token.ReturnType.Character;
                    break;
                }
                case INT: {
                    jj_consume_token(INT);
                    type.type = Token.ReturnType.Integer;
                    break;
                }
                case VOID: {
                    jj_consume_token(VOID);
                    type.type = Token.ReturnType.Void;
                    break;
                }
                default:
                    jj_la1[11] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }
    static final public void __VarDeclaratorId(boolean isFormal, DataType type, SymbolTable symbolTable)
            throws ParseException {/*
                                    * @bgen( jjtree ) __VarDeclaratorId
                                    */
        SimpleNode jjtn000 = new SimpleNode(JJT__VARDECLARATORID);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            Token var;
            if(isFormal) var = new FormalArgVarDeclToken(jj_consume_token(ID), type);
            else var = new VariableDeclToken(jj_consume_token(ID), type);
            symbolTable.setToken(var);
            var.containedIn = symbolTable;
            __Type_p(type, symbolTable);
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) throw (RuntimeException) jjte000;
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) throw (ParseException) jjte000;
                }
            }
            {
                if (true) throw (Error) jjte000;
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }
